# Scash_Wallet_App

./: README.md  RUST-BRIDGE.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/rust/scash_signer/: Cargo.toml  flutter_rust_bridge.yaml
lib/rust/scash_signer/.cargo/: config.toml
lib/rust/scash_signer/src/: address.rs  api.rs  frb_generated.rs  hd.rs  lib.rs  mnemonic.rs  network.rs  sign.rs  tx_builder.rs  utxo.rs
lib/services/: app_password_service.dart  storage_service.dart  wallet_service.dart
lib/services/wallet-core/: db.js  index.js  package-lock.json  package.json  scanConfirmedTransactions.js  scashRpc.js  transactionService.js
lib/services/wallet-core/routes/: price.routes.js
lib/services/wallet-core/services/: price.service.js
lib/src/app/: app.dart  app_routes.dart
lib/src/core/config/: app_config.dart
lib/src/core/theme/: colors.dart
lib/src/core/widgets/: app_bottom_drawer.dart  app_pressable.dart  app_radii.dart  app_scaffold.dart  top_toast.dart
lib/utils/: I10n.dart  amount.dart  event_bus.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+22 files in other folders)
