[package]
name = "scash_signer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# FFI - 固定版本
flutter_rust_bridge = "=2.11.1"

# 助记词 - 生成助记词需要 rand
bip39 = { version = "2.2.2", features = ["rand"] }

# HD 派生和比特币工具
bitcoin = { version = "0.31", features = ["std", "rand-std", "secp-recovery"] }

# 椭圆曲线
secp256k1 = { version = "0.29", features = ["rand"] }

# 编码库
bech32 = "0.11.1"
hex = "0.4"

# 安全库
zeroize = "1.8"
thiserror = "1.0"
rand = "0.8"
anyhow = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
